# rust-media-server

./: .gitignore  .gitmodules  Cargo.toml  README.md
app/: .angular-cli.json  package-lock.json  package.json
app/src/: index.html
app/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
app/src/app/header/: header.component.html  header.component.scss  header.component.ts
app/src/app/player/: player.component.html  player.component.scss  player.component.ts  player.module.ts
app/src/app/shared/: shared.module.ts
app/src/app/sidenav/: sidenav.component.ts
gmusic/: Cargo.toml
serde_mpd/src/: de.rs
src/: app.rs  bus.rs  main.rs
src/http/: graphql.rs  mod.rs
src/http/api/: list_albums.rs  list_artists.rs  list_playlists.rs  list_tracks.rs  mod.rs  pause_player.rs
src/http/api/handler/: get_album.rs  list_albums.rs  list_artists.rs  list_playlists.rs  list_tracks.rs  (+1 more)
src/jobs/: gst.rs  http.rs  mod.rs  mpd.rs  sync.rs
src/mpd/: mod.rs  song.rs
src/mpd/commands/: change_volume.rs  commands.rs  current_song.rs  list_artist.rs  list_info.rs  list_playlist.rs  list_playlist_info.rs  list_playlists.rs  load_playlist.rs  mod.rs  next.rs  outputs.rs  pause.rs  play.rs  previous.rs  set_volume.rs  status.rs  stop.rs  tagtypes.rs
src/player/: mod.rs  player.rs  queue.rs
src/pocketcasts/: episode.rs  mod.rs  podcast.rs  user.rs
src/provider/: explorer.rs  folder.rs  item.rs  mod.rs  sync_error.rs
src/provider/pocketcasts/: episode.rs  mod.rs  podcast.rs  user.rs
src/provider/soundcloud/: mod.rs  playlist.rs  track.rs
(+12 files in other folders)
