[package]
name = "rust-media-server"
version = "0.1.0"
authors = ["Max <maxjoehnk@gmail.com>"]

[dependencies]
slog-term = "2.3.0"
slog-async = "2.2.0"
lazy_static = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.2"
cookie = "0.10.1"
rayon = "0.9.0"
toml = "0.4.5"
gstreamer = "0.10.0"
glib = "0.4.0"
libc = "0.2.34"
regex = "0.2"
iron = "0.6.0"
staticfile = "*"
router = "*"
mount = "*"
mime = "0.2.6"
url = "*"

[dependencies.slog]
version = "2.1.1"
features = ["max_level_debug"]

[dependencies.soundcloud]
path = "soundcloud-rs"

[dependencies.serde_mpd]
path = "serde_mpd"